<resources>
    <string name="app_name" translatable="false">SharpIDE</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-1279472163660969/8935487535</string>

    <string name="title_settings">Settings</string>
    <string name="title_console">Launcher/Console</string>
    <string name="file_saved">File Saved</string>
    <string name="file_name">File Name</string>
    <string name="new_file_created">New file created</string>
    <string name="create_new_file">Create New File</string>
    <string name="invalid_file_name">Invalid File Name</string>
    <string name="action_close">Close</string>
    <string name="error_empty_file">File is empty</string>
    <string name="select_file">Select File</string>
    <string name="action_minify">Minify</string>
    <string name="obfuscation_desc">All new lines, tabs and comments will be removed from the file. Also some of the white spaces</string>
    <string name="directory">Directory:</string>
    <string name="no_errors">No Errors Found</string>
    <string name="error">Something went wrong</string>
    <string name="quit_confirm">Are you sure you want to quit?</string>
    <string name="replace_all">Replace All</string>
    <string name="text_to_replace">Text to replace</string>
    <string name="text_to_replace_with">Text to replace with</string>
    <string name="text_to_find">Text to find</string>
    <string name="ignore_case">Ignore Case</string>
    <string name="file_too_big">File is too big</string>
    <string name="file_minify_ready">Minified file saved in SharpIDE/Minify folder</string>
    <string name="action_apply">Apply</string>
    <string name="version">Version %s</string>

    <!-- Settings -->
    <string name="pref_category_general">General</string>
    <string name="pref_category_editor">Editor</string>
    <string name="pref_category_code_style">Code Style</string>
    <string name="pref_load_last_file">Load last opened file</string>
    <string name="pref_load_last_file_key" translatable="false">load_last_file</string>
    <string name="pref_quit_confirm">Confirm exit from app</string>
    <string name="pref_quit_confirm_desc">Show confirm dialog when trying to quit the app</string>
    <string name="pref_quit_confirm_key" translatable="false">quit_confirm</string>
    <string name="pref_hidden_files">Show hidden files</string>
    <string name="pref_hidden_files_desc">Show hidden files and folders when choosing a file</string>
    <string name="pref_hidden_files_key" translatable="false">show_hidden_files</string>
    <string name="pref_new_files_name">New Files Name</string>
    <string name="pref_new_files_name_desc">Set the default name of new files</string>
    <string name="pref_new_files_name_key" translatable="false">New Files Name</string>
    <string name="pref_font_size">Editor Font Size</string>
    <string name="pref_font_size_desc">Specify the font size of the editor</string>
    <string name="pref_font_size_key" translatable="false">editor_font_size</string>
    <string name="pref_line_numbers">Show line numbers</string>
    <string name="pref_line_numbers_desc">Display the line numbers in the editor</string>
    <string name="pref_line_numbers_key" translatable="false">show_line_numbers</string>
    <string name="pref_symbols_bar">Show symbol bar</string>
    <string name="pref_symbols_bar_desc">Show symbols bar while writing</string>
    <string name="pref_symbols_bar_key" translatable="false">show_symbols_bar</string>
    <string name="pref_syntax_highlighting">Syntax Highlighting</string>
    <string name="pref_syntax_highlighting_key" translatable="false">enable_syntax_highlighting</string>
    <string name="pref_highlight_current_line">Highlight Current Line</string>
    <string name="pref_highlight_current_line_key" translatable="false">highlight_current_line</string>
    <string name="pref_auto_close_brackets">Auto-Close Brackets</string>
    <string name="pref_auto_close_brackets_desc">Automatically close open parenthesis/bracket/brace when typing</string>
    <string name="pref_auto_close_brackets_key" translatable="false">auto_close_brackets</string>
    <string name="pref_auto_close_quotes">Auto-Close Quotes</string>
    <string name="pref_auto_close_quotes_desc">Automatically close single or double quote when typing</string>
    <string name="pref_auto_close_quotes_key" translatable="false">auto_close_quotes</string>
    <string name="pref_dark_theme">Use Dark Theme</string>
    <string name="pref_dark_theme_desc">An app restart might be required in order to apply this settings</string>
    <string name="pref_dark_theme_key" translatable="false">dark_theme</string>
    <string name="pref_code_completion">Code Completion</string>
    <string name="pref_code_completion_desc">This feature is still experimental and might not work as expected</string>
    <string name="pref_code_completion_key" translatable="false">show_code_suggestions</string>

    <!-- Menu -->
    <string name="group_files">Files</string>
    <string name="group_tools">Tools</string>
    <string name="menu_new_file">New File</string>
    <string name="menu_file_info">File Information</string>
    <string name="menu_save_file">Save File</string>
    <string name="menu_save_file_as">Save File As</string>
    <string name="menu_open_file">Open File</string>
    <string name="menu_find">Find</string>
    <string name="menu_run">Run</string>
    <string name="menu_minify_tool">Minify Tool</string>
    <string name="menu_go_to_line">Go To Line</string>
    <string name="menu_about">About</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_edit_duplicate_line">Duplicate Line</string>
    <string name="menu_edit_select_line">Select Line</string>
    <string name="menu_edit_delete_line">Delete Line</string>

    <!-- Updater -->
    <string name="updater_new_version">New version available</string>
    <string name="updater_new_update_desc">Please update the app to the newest version, to have the latest features!</string>
    <string name="updater_update">Update</string>
    <string name="updater_no">No, thanks</string>

    <!-- About -->
    <string name="about_title">If you liked the app, feel free to contact me.</string>
    <string name="about_rate">Rate on Google Play</string>
    <string name="about_feedback">Feedback by Email</string>
    <string name="about_website">My Website</string>
    <string name="about_open_source">Open Source Licenses</string>
    <string name="permission_required">External Storage permission is required in order for the app to work</string>
</resources>
