<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_obfuscation"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_margin"
    android:orientation="vertical"
    tools:context="net.theluckycoder.scriptcraft.MinifyActivity">

    <TextView
        android:text="@string/obfuscation_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textSize="18sp" />

    <Button
        android:text="@string/select_file"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="selectMod"
        android:textSize="16sp" />

    <Button
        style="@style/Widget.AppCompat.Button.Colored"
        android:id="@+id/obfuscateBtn"
        android:text="@string/action_minify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="obfuscate"
        android:textSize="16sp"
        android:enabled="false" />
</LinearLayout>
