<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_about_2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/card_margin_horizontal"
    android:layout_marginRight="@dimen/card_margin_horizontal"
    android:layout_marginBottom="@dimen/card_margin_vertical"
    tools:context=".activities.AboutActivity"
    tools:showIn="@layout/activity_about">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/view_margin"
            android:text="@string/about_title"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/main_background" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_about_shop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:drawablePadding="@dimen/about_compound_drawable_padding"
            android:gravity="center_vertical"
            android:padding="@dimen/activity_vertical_margin"
            android:text="@string/about_rate"
            android:textStyle="italic"
            app:drawableLeftCompat="@drawable/ic_about_shop" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_about_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:drawablePadding="@dimen/about_compound_drawable_padding"
            android:gravity="center_vertical"
            android:padding="@dimen/activity_vertical_margin"
            android:text="@string/about_feedback"
            android:textStyle="italic"
            app:drawableLeftCompat="@drawable/ic_about_email" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_about_website"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:drawablePadding="@dimen/about_compound_drawable_padding"
            android:gravity="center_vertical"
            android:padding="@dimen/activity_vertical_margin"
            android:text="@string/about_website"
            android:textStyle="italic"
            app:drawableLeftCompat="@drawable/ic_about_website" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_about_privacy_policy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:drawablePadding="@dimen/about_compound_drawable_padding"
            android:gravity="center_vertical"
            android:padding="@dimen/activity_vertical_margin"
            android:text="@string/about_privacy_policy"
            android:textStyle="italic"
            app:drawableLeftCompat="@drawable/ic_about_privacy_policy" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_about_open_source"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:drawablePadding="@dimen/about_compound_drawable_padding"
            android:gravity="center_vertical"
            android:padding="@dimen/activity_vertical_margin"
            android:text="@string/about_open_source"
            android:textStyle="italic"
            app:drawableLeftCompat="@drawable/ic_about_open_source" />

    </LinearLayout>

</androidx.cardview.widget.CardView>
